# thermal-camera-android

./: README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/breyt/thermalcamera/: Colormaps.java  MainActivity.java  ThermalCamera.java  ThermalData.java  ThermalView.java
app/src/main/java/com/example/thermalcamera/: Colormaps.java  MainActivity.java  ThermalCamera.java  ThermalData.java  ThermalView.java
app/src/main/res/drawable/: ic_camera.xml  ic_mirror.xml  ic_palette.xml  ic_rotate.xml
app/src/main/res/layout/: activity_main.xml  dialog_scale_adjust.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/menu/: overflow_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  device_filter.xml
